potentially fixed side space on mobile?

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 
 	body {
 		width: 100%;
+		overflow-y: scroll !important;
 		overflow-x: hidden;
 		background: #fff;
 	}
@@ -1233,6 +1234,7 @@
 	#wrapper {
 		width: 100%;
 		overflow-x: hidden;
+		position: fixed;
 	}
 }
 
